--- a/SGTPrinter/packages.config
+++ b/SGTPrinter/packages.config
@@ -6,6 +6,7 @@
   <package id="MongoDB.Driver.Core" version="2.11.6" targetFramework="net472" />
   <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="RawPrint" version="0.5.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.23.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
